# Advent-of-Code

./: .gitignore  Cargo.toml
2024/day_01/: Cargo.toml
2024/day_01/src/: main.rs
2024/day_02/src/: main.rs
2024/day_03/: input.txt
2024/day_03/src/: main.rs
2024/day_04/: input.txt
2024/day_04/src/: main.rs
2024/day_05/: Cargo.toml  input.txt
2024/day_05/src/: main.rs
src/: aoc2023.rs  lib.rs  main.rs
src/aoc2023/: day_01.rs  day_03.rs  day_04.rs  day_05.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
temp/src/: main.rs
temp/src/aoc2023/: day_02.rs  day_06.rs  day_09.rs
