[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
thiserror = "1.0.53"
tinyvec = { version = "1.6.0", features = ["alloc"] }
